...
    const { plant } = params;
    const [userPlant, setUserPlant] = useState<UserPlant>(JSON.parse(plant as string));
    const [userPlantTemp, setUserPlantTemp] = useState<UserPlant>(JSON.parse(plant as string));
    const [isWateringEnabled, setIsWateringEnabled] = useState(false);
    const [isFertilityEnabled, setIsFertilityEnabled] = useState(false);
    const [isModalVisible, setIsModalVisible] = useState(false);
    type ModalType = "watering_manual" | "watering_type" | "custom_name" | "height" | "age" | "pruning" | "spraying" | "rotation" | "site" | "pot_type" | "pot_size" | "pot_drainage" | "fertilizing" | null;
    const [modalType, setModalType] = useState<ModalType>(null);
    const [confirmVisible, setConfirmVisible] = useState(false);
    const [gardens, setGardens] = useState<Garden[]>([]);
    const [isLoading, setIsLoading] = useState(false);
    const { getUserId, accessToken, refreshToken, setTokens } = useAuth();
    const [isUploading, setIsUploading] = useState(false);
...
                                {isLoading ? (
                                    <>
                                        <ActivityIndicator size="small" color="#fff" />
                                        <ThemedText type="default" style={{ color: "#fff", fontWeight: 'bold' }}>Guardando...</ThemedText>
                                    </>
                                ) : (
                                    <ThemedText type="default" style={{ color: "#fff", fontWeight: 'bold' }}>Aceptar</ThemedText>
                                )}
                            </TouchableOpacity>
                        </View>
                        {modalType === 'custom_name' && (
                            <View style={styles.searchContainer}>
                                <TextInput
                                    placeholder="Nombre de la planta"
                                    placeholderTextColor={colorScheme === 'dark' ? Colors.dark.placeholder : Colors.light.placeholder}
                                    autoCapitalize="none"
                                    style={styles.searchInput}
                                    value={userPlantTemp.custom_name || ''}
                                    onChangeText={(text) => setUserPlantTemp({ ...userPlantTemp, custom_name: text })}
                                />
...
