...
                hitSlop={{ top: 20, bottom: 20, left: 20, right: 20 }}
                style={styles.buttonMenu}
                onPress={(event) => {
                  openModal(userPlant, event);
                }}
              >
                <Ionicons accessibilityRole="image" accessibilityLabel="Menú de opciones" name="ellipsis-vertical" size={30} color={colorScheme === "dark" ? Colors.dark.text : Colors.light.text} />
              </TouchableOpacity>

            </ThemedView>
          </TouchableOpacity>
          </Swipeable>
        ))}
...
            top: menuPosition.top,
            right: menuPosition.right
          }]}>
            <Pressable style={{ marginBottom: 12 }} onPress={() => {
              handleSettings(selectedPlant!.id);
            }}>
              <ThemedText type="defaultSemiBold">Ajustes de la planta</ThemedText>
            </Pressable>
            <Pressable onPress={() => {
              setConfirmVisible(true);
            }}>
              <ThemedText type="defaultSemiBold" style={{ fontSize: 16, color: "red" }}>Eliminar</ThemedText>
            </Pressable>
...
