...
      />
      <Tabs.Screen
        name="search"
        options={{
          title: 'Search',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="search" color={color} />,
          tabBarAccessibilityLabel: 'Buscar plantas',
        }}
      />
      <Tabs.Screen
        name="guide"
        options={{
          title: 'Guide',
...
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: 'Profile',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="account" color={color} />,
          tabBarAccessibilityLabel: 'Perfil de usuario',
        }}
      />
    </Tabs>
  );
}

