...
            <View style={styles.buttonContainer}>

                <TouchableOpacity style={styles.cameraButton} onPress={() => router.push('/camera-screen')}>
                    <Ionicons name="camera" size={120} color="#11181C" />
                </TouchableOpacity>
            </View>
            <Button text="Ver todas las plantas" onPress={goToPlantList} />
        </LinearGradient>
    );
}

const styles = StyleSheet.create({
    body: {
...
