...
                    contentContainerStyle={styles.scrollViewContent}
                    refreshControl={
                        <RefreshControl refreshing={refreshing} onRefresh={fetchPosts} />
                    }
                >
                    {posts.length === 0 ? (
                        <Text style={{ color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' }}>No hay publicaciones disponibles.</Text>
                    ) : (
                        posts.map((post) => (
                            <TouchableOpacity
                                onPress={(event) => {
                                    goToPostDetails(post.id!);
                                }}
...
                        top: menuPosition.top,
                        right: menuPosition.right
                    }]}>
                        <Pressable onPress={() => {
                            setConfirmVisible(true);
                        }}>
                            <ThemedText type="defaultSemiBold" style={{ fontSize: 16, color: "red" }}>Eliminar</ThemedText>
                        </Pressable>
                    </View>
                </TouchableOpacity>
            </Modal>
            {/* Modal de confirmación de eliminación */}
            <Modal
...
