...
            <Stack.Screen name="login" options={{ title: "", headerShown: true }} />
            <Stack.Screen name="signup" options={{ title: "", headerShown: true }} />
            <Stack.Screen name="camera-screen" options={{ title: "", headerShown: true }} />
            <Stack.Screen name="post-details" options={{ title: "", headerShown: true }} />
            <Stack.Screen name="post-form" options={{ title: "", headerShown: true }} />
            <Stack.Screen name="comment-form" options={{ title: "Añadir comentario", headerShown: true }} />
            <Stack.Screen name="settings" options={{ title: "Ajustes", headerShown: true }} />
            <Stack.Screen name="posts-list" options={{ title: "Listado de publicaciones", headerShown: true }} />
            <Stack.Screen name="comments-list" options={{ title: "Listado de comentarios", headerShown: true }} />
            <Stack.Screen name="pests-search" options={{ title: "Listado de plagas y enfermedades", headerShown: true }} />
            <Stack.Screen name="+not-found" />
          </Stack>
          </KeyboardProvider>
...
