...

    return (
        <>
            <ScrollView>
                <View style={styles.body}>
                    <ThemedView style={styles.card}>
                        <ThemedText type='title2' style={{ marginBottom: 8 }}>Cuenta</ThemedText>
                        {/* Nombre */}
                        <TouchableOpacity
                            style={styles.subcardTouchable}
                            onPress={() => {
                                openModal('username')
                            }}
...
                            onPress={() => {
                                openModal('email')
                            }}
                        >
                            <View style={{ flexDirection: "row", alignItems: "center", gap: 8 }}>
                                <Ionicons name="mail" size={24} color={"#bfd8c5ff"} />
                                <ThemedText type='default'>Email</ThemedText>
                            </View>
                            <View style={{ display: 'flex', alignItems: "center", flexDirection: "row", gap: 6, alignContent: 'center' }}>
                                <ThemedText type='italic'>{user.email || '—'}</ThemedText>
                                <Ionicons name="chevron-forward" size={16} color={"#bfd8c5ff"}></Ionicons>
                            </View>
                        </TouchableOpacity>
...
                                <Ionicons name="chevron-forward" size={16} color={"#bfd8c5ff"}></Ionicons>
                            </View>
                        </TouchableOpacity>
                    </ThemedView>

                    <ThemedView style={styles.card}>
                        <ThemedText type="title2" style={{ marginBottom: 8 }}>Publicaciones</ThemedText>
                        {/* Posts */}
                        <TouchableOpacity
                            style={styles.subcardTouchable}
                            onPress={() => { router.push('/posts-list'); }}
                        >
                            <View style={{ flexDirection: "row", alignItems: "center", gap: 8 }}>
...
                                {isLoading ? (
                                    <>
                                        <ActivityIndicator size="small" color="#fff" />
                                        <ThemedText type="default" style={{ color: "#fff", fontWeight: 'bold' }}>Guardando...</ThemedText>
                                    </>
                                ) : (
                                    <ThemedText type="default" style={{ color: "#fff", fontWeight: 'bold' }}>Aceptar</ThemedText>
                                )}
                            </TouchableOpacity>
                        </View>
                        
                            {modalType === 'username' && (
                                <View style={styles.searchContainer}>
...
                                    />
                                </View>
                            )}
                            {modalType === 'email' && (
                                <View style={styles.searchContainer}>
                                    <TextInput
                                        placeholder="Correo electrónico"
                                        placeholderTextColor={colorScheme === 'dark' ? Colors.dark.placeholder : Colors.light.placeholder}
                                        autoCapitalize="none"
                                        style={styles.searchInput}
                                        value={userTemp.email}
                                        onChangeText={(text) => { setUserTemp({ ...userTemp, email: text }); }}
                                    />
...
