...
      <LinearGradient
        colors={['rgba(213, 240, 219, 0.19)', backgroundColor]} // Cambia estos colores a los que quieras
        style={[styles.container, { paddingVertical: 16 }]}
      >
        <View style={styles.titleContainer}>
          <View style={{ flexDirection: 'row', justifyContent: 'space-between', alignContent: 'center', gap: 8 }}>
            <ThemedText type="title">Mis plantas</ThemedText>
            <TouchableOpacity
              testID='settings'
              style={{ paddingVertical: 8 }}
              onPress={(event) => {
                router.push({
                  pathname: "/settings"
                });

...
